QJS/QJS.h

typedef void* RuntimeHandle;
typedef void* ContextHandle;
struct ValueHandle
{
	ContextHandle ctx;
	uint64_t value;
};
//Js value类型
enum ValueType
{
	JS_TYPE_UNINITIALIZED = 0,
	JS_TYPE_INT = 1,
	JS_TYPE_BOOL = 2,
	JS_TYPE_NULL = 3,
	JS_TYPE_UNDEFINED = 4,
	JS_TYPE_CATCH_OFFSET = 5,
	JS_TYPE_EXCEPTION = 6,
	JS_TYPE_FLOAT64 = 7,

	/* all tags with a reference count have 0b1000 bit */
	JS_TYPE_OBJECT = 8,
	JS_TYPE_FUNCTION_BYTECODE = 9, /* used internally */
	JS_TYPE_MODULE = 10, /* used internally */
	JS_TYPE_STRING = 11,
	JS_TYPE_SYMBOL = 12,
	JS_TYPE_BIG_FLOAT = 13,
	JS_TYPE_BIG_INT = 14,
	JS_TYPE_BIG_DECIMAL = 15,
};
//创建js运行时
QJS_API RuntimeHandle NewRuntime();
//销毁js运行时
QJS_API void FreeRuntime(RuntimeHandle runtime);
//get set runtime userdata
QJS_API void SetRuntimeUserData(RuntimeHandle runtime, void* user_data);
QJS_API void* GetRuntimeUserData(RuntimeHandle runtime);
//创建js上下文
QJS_API ContextHandle NewContext(RuntimeHandle runtime);
//销毁js上下文
QJS_API void FreeContext(ContextHandle ctx);
//get set context userdata
QJS_API void SetContextUserData(ContextHandle ctx, void* user_data);
QJS_API void* GetContextUserData(ContextHandle ctx);
//获得顶层对象
QJS_API ValueHandle GetGlobalObject(ContextHandle ctx);
//运行脚本
QJS_API ValueHandle RunScript(ContextHandle ctx, const char* script, ValueHandle parent, const char* filename="");
//执行js中函数，没有参数时args=NULL并且argc=0
QJS_API ValueHandle CallJsFunction(ContextHandle ctx, ValueHandle jsFunction, ValueHandle args[], int argc, ValueHandle parent);
//根据名称取得一个js变量值
QJS_API ValueHandle GetNamedJsValue(ContextHandle ctx, const char* varName, ValueHandle parent);
//根据名称设置一个js变量值
QJS_API bool SetNamedJsValue(ContextHandle ctx, const char* varName, ValueHandle varValue, ValueHandle parent);
//根据名称删除一个js变量值
QJS_API bool DeleteNamedJsValue(ContextHandle ctx, const char* varName, ValueHandle parent);
//是否有一个名称的js变量值
QJS_API bool HasNamedJsValue(ContextHandle ctx, const char* varName, ValueHandle parent);
//根据序号获得一个js变量值
QJS_API ValueHandle GetIndexedJsValue(ContextHandle ctx, uint32_t idx, ValueHandle parent);
//根据序号设置一个js变量值
QJS_API bool SetIndexedJsValue(ContextHandle ctx, uint32_t idx, ValueHandle varValue, ValueHandle parent);
//根据序号删除一个js变量值
QJS_API bool DeleteIndexedJsValue(ContextHandle ctx, uint32_t idx, ValueHandle parent);
///原型
//获得一个js变量的原型对象
QJS_API ValueHandle GetPrototype(ContextHandle ctx, ValueHandle jObj);
QJS_API bool SetPrototype(ContextHandle ctx, ValueHandle jObj, ValueHandle protoJVal);
//JS的undefined值
QJS_API ValueHandle TheJsUndefined();
//JS的null值
QJS_API ValueHandle TheJsNull();
//JS的true值
QJS_API ValueHandle TheJsTrue();
//JS的false值
QJS_API ValueHandle TheJsFalse();
//设置geter seter
QJS_API bool DefineGetterSetter(ContextHandle ctx, ValueHandle parent, 
	const char* propName, ValueHandle getter, ValueHandle setter);
//int转ValueHandle
QJS_API ValueHandle NewIntJsValue(ContextHandle ctx, int intValue);
QJS_API ValueHandle NewInt64JsValue(ContextHandle ctx, int64_t intValue);
//double转ValueHandle
QJS_API ValueHandle NewDoubleJsValue(ContextHandle ctx, double doubleValue);
//string转ValueHandle
QJS_API ValueHandle NewStringJsValue(ContextHandle ctx, const char* stringValue);
//bool转ValueHandle
QJS_API ValueHandle NewBoolJsValue(ContextHandle ctx, bool boolValue);
//创建一个JS Object
QJS_API ValueHandle NewObjectJsValue(ContextHandle ctx);
//get set object userdata
QJS_API bool SetObjectUserData(ValueHandle value, void* user_data);
QJS_API void* GetObjectUserData(ValueHandle value);
//创建一个JS Array
QJS_API ValueHandle NewArrayJsValue(ContextHandle ctx);
//创建一个抛出异常
QJS_API ValueHandle NewThrowJsValue(ContextHandle ctx, ValueHandle throwWhat);
//日期转ValueHandle
QJS_API ValueHandle NewDateJsValue(ContextHandle ctx, uint64_t ms_since_1970);
//自定义js函数原型
typedef ValueHandle(*FN_JsFunctionCallback)(
	ContextHandle ctx, ValueHandle this_val, int argc, ValueHandle* argv, void* user_data);
//创建一个JS函数
QJS_API ValueHandle NewFunction(ContextHandle ctx, FN_JsFunctionCallback cb, int argc, void* user_data);
//获得.length属性 失败返回-1
QJS_API int64_t GetLength(ContextHandle ctx, ValueHandle obj);
//ValueHandle转string
QJS_API const char* JsValueToString(ContextHandle ctx, ValueHandle value);
//ValueHandle转int
QJS_API int JsValueToInt(ContextHandle ctx, ValueHandle value, int defVal/* = 0*/);
//ValueHandle转int64
QJS_API int64_t JsValueToInt64(ContextHandle ctx, ValueHandle value, int64_t defVal/* = 0*/);
//ValueHandle转double
QJS_API double JsValueToDouble(ContextHandle ctx, ValueHandle value, double defVal/* = 0.0*/);
//ValueHandle转bool
QJS_API bool JsValueToBool(ContextHandle ctx, ValueHandle value, bool defVal/* = false*/);
//ValueHandle转timestamp
QJS_API uint64_t JsValueToTimestamp(ContextHandle ctx, ValueHandle value);
//编译脚本
QJS_API ValueHandle CompileScript(ContextHandle ctx, const char* script, const char* filename/* = ""*/);
//ValueHandle转ByteCode
QJS_API uint8_t* JsValueToByteCode(ContextHandle ctx, ValueHandle value, size_t* outByteCodeLen, bool byte_swap/* = false*/);
//释放js指针
QJS_API void FreeJsPointer(ContextHandle ctx, void* ptr);