CSharp/QJSharp/QJS.cs

using System;
using System.Collections;
using System.Collections.Generic;
using System.Drawing;
using System.Reflection;
using System.Runtime.InteropServices;
using System.Text;

namespace QJSharp
{
    public class QJS : IDisposable
    {
        #region QJS.dll import
        public enum ValueType
        {
            JS_TYPE_UNINITIALIZED = 0,
            JS_TYPE_INT = 1,
            JS_TYPE_BOOL = 2,
            JS_TYPE_NULL = 3,
            JS_TYPE_UNDEFINED = 4,
            JS_TYPE_CATCH_OFFSET = 5,
            JS_TYPE_EXCEPTION = 6,
            JS_TYPE_FLOAT64 = 7,

            /* all tags with a reference count have 0b1000 bit */
            JS_TYPE_OBJECT = 8,
            JS_TYPE_FUNCTION_BYTECODE = 9, /* used internally */
            JS_TYPE_MODULE = 10, /* used internally */
            JS_TYPE_STRING = 11,
            JS_TYPE_SYMBOL = 12,
            JS_TYPE_BIG_FLOAT = 13,
            JS_TYPE_BIG_INT = 14,
            JS_TYPE_BIG_DECIMAL = 15,
        };

        [DllImport("QJS.dll", EntryPoint = "NewRuntime")]
        private static extern UIntPtr NewRuntime();

        [DllImport("QJS.dll", EntryPoint = "FreeRuntime")]
        private static extern void FreeRuntime(UIntPtr runtime);

        [DllImport("QJS.dll", EntryPoint = "SetRuntimeUserData")]
        private static extern void SetRuntimeUserData(UIntPtr runtime, int key, IntPtr user_data);

        [DllImport("QJS.dll", EntryPoint = "GetRuntimeUserData")]
        private static extern UIntPtr GetRuntimeUserData(UIntPtr runtime, int key);

        [DllImport("QJS.dll", EntryPoint = "NewContext")]
        private static extern UIntPtr NewContext(UIntPtr runtime);

        [DllImport("QJS.dll", EntryPoint = "FreeContext")]
        private static extern void FreeContext(UIntPtr ctx);

        [DllImport("QJS.dll", EntryPoint = "ResetContext")]
        private static extern void ResetContext(UIntPtr ctx);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void OnFreeingContextCallback(UIntPtr ctx);
        [DllImport("QJS.dll", EntryPoint = "SetFreeingContextCallback")]
        private static extern void SetFreeingContextCallback(UIntPtr ctx, OnFreeingContextCallback cb);

        [DllImport("QJS.dll", EntryPoint = "RemoveFreeingContextCallback")]
        private static extern bool RemoveFreeingContextCallback(UIntPtr ctx, OnFreeingContextCallback cb);

        [DllImport("QJS.dll", EntryPoint = "GetContextRuntime")]
        private static extern UIntPtr GetContextRuntime(UIntPtr ctx);

        [DllImport("QJS.dll", EntryPoint = "SetContextUserData")]
        private static extern void SetContextUserData(UIntPtr ctx, int key, IntPtr user_data);

        [DllImport("QJS.dll", EntryPoint = "GetContextUserData")]
        private static extern UIntPtr GetContextUserData(UIntPtr ctx, int key);

        [DllImport("QJS.dll", EntryPoint = "GetGlobalObject")]
        private static extern ValueHandle GetGlobalObject(UIntPtr ctx);

        [DllImport("QJS.dll", EntryPoint = "FreeJsPointer")]
        private static extern void FreeJsPointer(UIntPtr ctx, IntPtr ptr);

        [DllImport("QJS.dll", EntryPoint = "LoadFile")]
        private static extern IntPtr LoadFile(UIntPtr ctx, out UInt64 outLen, string filename);        

        [DllImport("QJS.dll", EntryPoint = "RunScript")]
        private static extern ValueHandle RunScript(UIntPtr ctx, byte[] script, ValueHandle parent, byte[] filename);

        [DllImport("QJS.dll", EntryPoint = "RunScriptFile")]
        private static extern ValueHandle RunScriptFile(UIntPtr ctx, string filename, ValueHandle parent);

        [DllImport("QJS.dll", EntryPoint = "CallJsFunction")]
        private static extern ValueHandle CallJsFunction(UIntPtr ctx, ValueHandle jsFunction, IntPtr argv, int argc, ValueHandle parent);
        
        [DllImport("QJS.dll", EntryPoint = "GetNamedJsValue")]
        private static extern ValueHandle GetNamedJsValue(UIntPtr ctx, byte[] varName, ValueHandle parent);

        [DllImport("QJS.dll", EntryPoint = "SetNamedJsValue")]
        private static extern bool SetNamedJsValue(UIntPtr ctx, byte[] varName, ValueHandle varValue, ValueHandle parent);

        [DllImport("QJS.dll", EntryPoint = "DeleteNamedJsValue")]
        private static extern bool DeleteNamedJsValue(UIntPtr ctx, byte[] varName, ValueHandle parent);

        [DllImport("QJS.dll", EntryPoint = "HasNamedJsValue")]
        private static extern bool HasNamedJsValue(UIntPtr ctx, byte[] varName, ValueHandle parent);

        [DllImport("QJS.dll", EntryPoint = "GetObjectPropertyKeys")]
        private static extern ValueHandle GetObjectPropertyKeys(UIntPtr ctx, ValueHandle jObj, 
            bool onlyEnumerable/*=true*/, bool enableSymbol/*=false*/);

        [DllImport("QJS.dll", EntryPoint = "GetFunctionName")]
        private static extern ValueHandle GetFunctionName(UIntPtr ctx, ValueHandle func);

        [DllImport("QJS.dll", EntryPoint = "GetCurFrameFunction")]
        private static extern ValueHandle GetCurFrameFunction(UIntPtr ctx);

        [DllImport("QJS.dll", EntryPoint = "GetIndexedJsValue")]
        private static extern ValueHandle GetIndexedJsValue(UIntPtr ctx, UInt32 idx, ValueHandle parent);

        [DllImport("QJS.dll", EntryPoint = "SetIndexedJsValue")]
        private static extern bool SetIndexedJsValue(UIntPtr ctx, UInt32 idx, ValueHandle varValue, ValueHandle parent);

        [DllImport("QJS.dll", EntryPoint = "DeleteIndexedJsValue")]
        private static extern bool DeleteIndexedJsValue(UIntPtr ctx, UInt32 idx, ValueHandle parent);

        [DllImport("QJS.dll", EntryPoint = "GetLength")]
        private static extern Int64 GetLength(UIntPtr ctx, ValueHandle obj);

        [DllImport("QJS.dll", EntryPoint = "GetPrototype")]
        private static extern ValueHandle GetPrototype(UIntPtr ctx, ValueHandle jObj);

        [DllImport("QJS.dll", EntryPoint = "SetPrototype")]
        private static extern bool SetPrototype(UIntPtr ctx, ValueHandle jObj, ValueHandle protoJVal);

        [DllImport("QJS.dll", EntryPoint = "TheJsUndefined")]
        public static extern ValueHandle TheJsUndefined();

        [DllImport("QJS.dll", EntryPoint = "TheJsNull")]
        public static extern ValueHandle TheJsNull();

        [DllImport("QJS.dll", EntryPoint = "TheJsTrue")]
        public static extern ValueHandle TheJsTrue();

        [DllImport("QJS.dll", EntryPoint = "TheJsFalse")]
        public static extern ValueHandle TheJsFalse();

        [DllImport("QJS.dll", EntryPoint = "DefineGetterSetter")]
        private static extern bool DefineGetterSetter(UIntPtr ctx, ValueHandle parent,
            byte[] propName, ValueHandle getter, ValueHandle setter);

        [DllImport("QJS.dll", EntryPoint = "NewIntJsValue")]
        private static extern ValueHandle NewIntJsValue(UIntPtr ctx, int intValue);

        [DllImport("QJS.dll", EntryPoint = "NewInt64JsValue")]
        private static extern ValueHandle NewInt64JsValue(UIntPtr ctx, Int64 intValue);

        [DllImport("QJS.dll", EntryPoint = "NewUInt64JsValue")]
        private static extern ValueHandle NewUInt64JsValue(UIntPtr ctx, UInt64 intValue);

        [DllImport("QJS.dll", EntryPoint = "NewDoubleJsValue")]
        private static extern ValueHandle NewDoubleJsValue(UIntPtr ctx, double doubleValue);

        [DllImport("QJS.dll", EntryPoint = "NewStringJsValue")]
        private static extern ValueHandle NewStringJsValue(UIntPtr ctx, byte[] stringValue);

        [DllImport("QJS.dll", EntryPoint = "NewBoolJsValue")]
        private static extern ValueHandle NewBoolJsValue(UIntPtr ctx, bool boolValue);

        [DllImport("QJS.dll", EntryPoint = "NewObjectJsValue")]
        private static extern ValueHandle NewObjectJsValue(UIntPtr ctx);

        [DllImport("QJS.dll", EntryPoint = "SetObjectUserData")]
        private static extern bool SetObjectUserData(ValueHandle value, IntPtr user_data);

        [DllImport("QJS.dll", EntryPoint = "GetObjectUserData")]
        private static extern IntPtr GetObjectUserData(ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "NewArrayJsValue")]
        private static extern ValueHandle NewArrayJsValue(UIntPtr ctx);

        [DllImport("QJS.dll", EntryPoint = "NewThrowJsValue")]
        private static extern ValueHandle NewThrowJsValue(UIntPtr ctx, ValueHandle throwWhat);

        [DllImport("QJS.dll", EntryPoint = "NewDateJsValue")]
        private static extern ValueHandle NewDateJsValue(UIntPtr ctx, UInt64 ms_since_1970);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void BufferOnceFree(UIntPtr ctx, UIntPtr buf);
        [DllImport("QJS.dll", EntryPoint = "NewArrayBufferJsValue")]
        private static extern ValueHandle NewArrayBufferJsValue(UIntPtr ctx, IntPtr buf, int bufLen, BufferOnceFree freeFunc/* = NULL*/);

        [DllImport("QJS.dll", EntryPoint = "NewArrayBufferJsValueCopy")]
        private static extern ValueHandle NewArrayBufferJsValueCopy(UIntPtr ctx, IntPtr buf, int bufLen);

        [DllImport("QJS.dll", EntryPoint = "DetachArrayBufferJsValue")]
        private static extern void DetachArrayBufferJsValue(UIntPtr ctx, ref ValueHandle arrBuf);

        [DllImport("QJS.dll", EntryPoint = "GetArrayBufferPtr")]
        private static extern IntPtr GetArrayBufferPtr(UIntPtr ctx, ValueHandle arrBuf, ref int outBufLen);

        [DllImport("QJS.dll", EntryPoint = "GetArrayBufferByTypedArrayBuffer")]
        private static extern ValueHandle GetArrayBufferByTypedArrayBuffer(UIntPtr ctx, ValueHandle typedArrBuf,
                                                                            ref int out_byte_offset,
                                                                            ref int out_byte_length,
                                                                            ref int out_bytes_per_element);

        [DllImport("QJS.dll", EntryPoint = "FillArrayBuffer")]
        private static extern bool FillArrayBuffer(UIntPtr ctx, ValueHandle arrBuf, byte fill);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate ValueHandle _JsFunctionCallback(UIntPtr ctx, ValueHandle this_val, int argc, IntPtr argv, IntPtr user_data);
        [DllImport("QJS.dll", EntryPoint = "NewFunction")]
        private static extern ValueHandle NewFunction(UIntPtr ctx, _JsFunctionCallback cb, int argc, IntPtr user_data);

        [DllImport("QJS.dll", EntryPoint = "JsValueToString")]
        private static extern IntPtr JsValueToString(UIntPtr ctx, ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "JsValueToInt")]
        private static extern int JsValueToInt(UIntPtr ctx, ValueHandle value, int defVal/* = 0*/);

        [DllImport("QJS.dll", EntryPoint = "JsValueToInt64")]
        private static extern Int64 JsValueToInt64(UIntPtr ctx, ValueHandle value, Int64 defVal/* = 0*/);

        [DllImport("QJS.dll", EntryPoint = "JsValueToUInt64")]
        private static extern UInt64 JsValueToUInt64(UIntPtr ctx, ValueHandle value, UInt64 defVal/* = 0*/);

        [DllImport("QJS.dll", EntryPoint = "JsValueToDouble")]
        private static extern double JsValueToDouble(UIntPtr ctx, ValueHandle value, double defVal/* = 0.0*/);

        [DllImport("QJS.dll", EntryPoint = "JsValueToBool")]
        private static extern bool JsValueToBool(UIntPtr ctx, ValueHandle value, bool defVal/* = false*/);

        [DllImport("QJS.dll", EntryPoint = "JsValueToTimestamp")]
        private static extern UInt64 JsValueToTimestamp(UIntPtr ctx, ValueHandle value);

        [DllImport("QJS.dll", EntryPoint = "CompileScript")]
        private static extern ValueHandle CompileScript(UIntPtr ctx, byte[] script, byte[] filename/* = ""*/);

        [DllImport("QJS.dll", EntryPoint = "JsValueToByteCode")]
        private static extern IntPtr JsValueToByteCode(UIntPtr ctx, ValueHandle value, ref int outByteCodeLen, bool byte_swap/* = false*/);
